@@ -28,7 +28,7 @@ package de.independit.scheduler.server.parser;
 import java.io.*;
 import java.util.*;
 import java.lang.*;
-import javax.xml.bind.DatatypeConverter;
+import java.util.Base64;
 
 import de.independit.scheduler.server.*;
 import de.independit.scheduler.server.util.*;
@@ -89,11 +89,11 @@ public class SSOConnect extends Connect
 			provider = (WindowsAuthProviderImpl)(sysEnv.cEnv.SSOInfo.get(PROVIDER));
 		}
 		try {
-			byteToken = DatatypeConverter.parseBase64Binary(token);
+			byteToken = Base64.getDecoder().decode(token);
 			serverContext = provider.acceptSecurityToken("server-connection", byteToken, "Negotiate");
 			byteToken = serverContext.getToken();
 			if (byteToken != null)
-				token = DatatypeConverter.printBase64Binary(byteToken);
+				token = Base64.getEncoder().encodeToString(byteToken);
 			else
 				token = "null";
 
@@ -165,7 +165,7 @@ public class SSOConnect extends Connect
 				}
 			}
 			if (!isBicsuiteUser)
-				throw new CommonErrorException(new SDMSMessage(sysEnv, "02709251459", "Permission denied"));
+				throw new CommonErrorException(new SDMSMessage(sysEnv, "02709251505", "Permission denied"));
 
 			if (SystemEnvironment.useAdGroups)
 				initUser(sysEnv, vGroups.toArray(new String[0]), false, SystemEnvironment.autoCreateUsers, SystemEnvironment.autoCreateGroups, defaultGroup);
@@ -179,7 +179,7 @@ public class SSOConnect extends Connect
 			desc.add("TOKEN");
 			data.add(token);
 		}
-		d_container = new SDMSOutputContainer(sysEnv, new SDMSMessage (sysEnv, "03205141302", "Connect"), desc, data);
+		d_container = new SDMSOutputContainer(sysEnv, new SDMSMessage (sysEnv, "03205141303", "Connect"), desc, data);
 		result.setOutputContainer(d_container);
 		result.setFeedback(new SDMSMessage(sysEnv, "03709191436", (firstTime ? "Connection in progress" : "Connected")));
 	}
